# DALIA-RELOADED

./: .gitignore  BUILD_WINDOWS.md  GUIDE_TESTEUR.txt  LICENSE  PODMAN_RUN.md  README.md  build.sh  docker-compose.yml  scrape_loop.sh
DALIA DESIGN/react-export/: README.md  index.html  package.json
DALIA DESIGN/react-export/src/: App.jsx  index.css  main.jsx
backend/: .env.example  dalia_launcher.py  overnight.sh  requirements.txt  run.py  train_all.sh  train_best.sh  train_now.sh
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/data/: champion_overrides.json
backend/app/ml/: collect_matches.py  model.py  predictor.py  train.py
backend/app/models/: draft.py  history.py
backend/app/services/: ban_recommender.py  champion_data.py  composition.py  data_fetcher.py  draft_engine.py  lcu_connector.py  matchup.py  meta_analyzer.py
client/: .dockerignore  .env.production  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lcu.rs  lib.rs  main.rs
client/src/components/: DaliaLogo.jsx  HeroPanel.jsx  (+5 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
scripts/: auto-update.sh
server/: .dockerignore  .env.example  Dockerfile  Procfile  alembic.ini  docker-compose.yml  overnight.sh  railway.toml  requirements.txt  run.py
server/alembic/: env.py
server/app/: __init__.py  config.py  main.py
(+611 files in other folders)
