[package]
name = "dalia-client"
version = "2.0.0"
description = "DALIA Desktop Client — League of Legends Draft Assistant"
authors = ["DALIA Team"]
edition = "2021"

[lib]
name = "dalia_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs-next = "2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
